--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT = 5000
 DATABASE_URL = mongodb+srv://admin-um:admin12345678@cluster0.b9mxjbp.mongodb.net/first-project?retryWrites=true&w=majority
+BCRYPT_SALT_ROUND = 10
+DEFAULT_PASS = phero@#
